--- a/ActionRogueLike.uproject
+++ b/ActionRogueLike.uproject
@@ -11,7 +11,9 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"Slate",
-				"SlateCore"
+				"SlateCore",
+				"AIModule",
+				"UMG"
 			]
 		}
 	]
